compatibility-tests/compile-fail/tests/ui/duplication-struct.stderr
error: Multiple `source(from)` attributes are not supported on a tuple struct
 --> tests/ui/duplication-struct.rs:8:9
  |
8 | #[snafu(source(from(UsableError, Box::new)))]
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
